# cj-backend

./: .gitignore  .gitmessage.txt  README.md  cookies.txt  db.sqlite3  pyproject.toml
.github/workflows/: checks.yml
apps/: constants.py
apps/accounts/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_transactionhistory_post_transaction_balance_and_more.py  0004_alter_transactionhistory_balance_and_more.py  0005_transactionhistory_is_canceled_and_more.py
apps/users/: admin.py  authentication.py  models.py  serializers.py  tests.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_is_active.py
config/: db.sqlite3  urls.py
config/settings/: base.py  dev.py  prod.py
django_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
