[project]
name = "django-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "django>=5.2.2",
  "djangorestframework>=3.16.0",
]

[project.optional-dependencies]
dev = [
  "drf-yasg>=1.21.10",
  "black>=23.9.1",
  "isort>=5.12.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["apps", "apps.*", "config", "config.*"]
exclude = ["static", "templates"]

[tool.isort]
profile = "black"
